Web-Market is Ended

--- a/app/blog-one.html
+++ b/app/blog-one.html
@@ -375,7 +375,7 @@
 
             <div class="blogfilter">
               <div class="filter-search filter__item">
-                <h3 class="filter__title">Search</h3>
+                <h3 class="filter__title filter-search__title">Search</h3>
                 <form class="filter-search__form" action="#">
                   <input
                     class="filter-search__input"
