--- a/app/blog.html
+++ b/app/blog.html
@@ -111,7 +111,7 @@
                 <div class="blogpage__content-textbox">
                   <a class="blogpage__content-title" href="#">
                     Be prepared to sweat a lot, but at least in the Southern
-                    regions there’s a good chance you’ll get to enjoy!
+                    regions there's a good chance you'll get to enjoy!
                   </a>
                   <div class="blog__item-info blogpage__item-info">
                     <a class="blog__item-author" href="#">By Admin</a>
@@ -127,7 +127,7 @@
               </div>
 
               <div class="blogpage__content-item">
-                <div class="blogpage__content-media">
+                <div class="blogpage__content-media blogpage__content-popup">
                   <div
                     class="blogpage__media-popup"
                     style="background-image: url('images/blog/popup-img.jpg')"
@@ -143,7 +143,7 @@
                 <div class="blogpage__content-textbox">
                   <a class="blogpage__content-title href="#">
                     Be prepared to sweat a lot, but at least in the Southern
-                    regions there’s a good chance you’ll get to enjoy!
+                    regions there's a good chance you'll get to enjoy!
                   </a>
                   <div class="blog__item-info blogpage__item-info">
                     <a class="blog__item-author" href="#">By Admin</a>
@@ -159,7 +159,7 @@
               </div>
 
               <div class="blogpage__content-item">
-                <div class="blogpage__content-media">
+                <div class="blogpage__content-media blogpage__content-slider">
                   <div class="blogpage__media-slider">
                     <div class="blogpage__slider-item">
                       <img src="images/blog/blog-slider-img.jpg" alt="slider image">
@@ -175,7 +175,7 @@
                 <div class="blogpage__content-textbox">
                   <a class="blogpage__content-title href="#">
                     Be prepared to sweat a lot, but at least in the Southern
-                    regions there’s a good chance you’ll get to enjoy!
+                    regions there's a good chance you'll get to enjoy!
                   </a>
                   <div class="blog__item-info blogpage__item-info">
                     <a class="blog__item-author" href="#">By Admin</a>
@@ -194,7 +194,7 @@
                 <div class="blogpage__content-textbox">
                   <a class="blogpage__content-title href="#">
                     Be prepared to sweat a lot, but at least in the Southern
-                    regions there’s a good chance you’ll get to enjoy!
+                    regions there's a good chance you'll get to enjoy!
                   </a>
                   <div class="blog__item-info blogpage__item-info">
                     <a class="blog__item-author" href="#">By Admin</a>
@@ -212,7 +212,7 @@
 
             <div class="blogfilter">
               <div class="filter-search filter__item">
-                <h3 class="filter__title">Search</h3>
+                <h3 class="filter__title filter-search__title">Search</h3>
                 <form class="filter-search__form" action="#">
                   <input
                     class="filter-search__input"
