--- a/app/contacts.html
+++ b/app/contacts.html
@@ -111,8 +111,8 @@
 
             <div class="contacts__content">
               <div class="contacts__contact">
-                <h3 class="contacts__contact-title">
-                  Feel Free Don’t Hesitate To Contact With Us
+                <h3 class="contacts__contact-title title">
+                  Feel Free Don't Hesitate To Contact With Us
                 </h3>
                 <p class="contacts__contact-text">
                   Lorem ipsum dolor sit amet, consectetur adingn elit, sed do
