--- a/app/index.html
+++ b/app/index.html
@@ -88,7 +88,7 @@
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                   do et dolore magna aliqua. Ipsum.
                 </p>
-                <a class="top-slider__link" href="#"> BUY NOW </a>
+                <a class="top-slider__link" href="shop.html"> BUY NOW </a>
               </div>
               <div class="top-slider__img">
                 <img
@@ -108,7 +108,7 @@
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                   do et dolore magna aliqua. Ipsum.
                 </p>
-                <a class="top-slider__link" href="#"> BUY NOW </a>
+                <a class="top-slider__link" href="shop.html"> BUY NOW </a>
               </div>
               <div class="top-slider__img">
                 <img
@@ -128,7 +128,7 @@
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                   do et dolore magna aliqua. Ipsum.
                 </p>
-                <a class="top-slider__link" href="#"> BUY NOW </a>
+                <a class="top-slider__link" href="shop.html"> BUY NOW </a>
               </div>
               <div class="top-slider__img">
                 <img
@@ -148,7 +148,7 @@
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                   do et dolore magna aliqua. Ipsum.
                 </p>
-                <a class="top-slider__link" href="#"> BUY NOW </a>
+                <a class="top-slider__link" href="shop.html"> BUY NOW </a>
               </div>
               <div class="top-slider__img">
                 <img
@@ -272,7 +272,7 @@
                 labore et dolore magna aliqua.. Quis ipsum de ultcesm. Risus
                 commodo viverra maecenas.
               </p>
-              <a class="video-fashion__link" href="#"> View Now </a>
+              <a class="video-fashion__link" href="shop.html"> View Now </a>
             </div>
           </div>
         </div>
@@ -850,7 +850,7 @@
               </div>
             </div>
           </div>
-          <a class="product__link" href="#"> LOAD MORE </a>
+          <button class="product__link" href="#">LOAD MORE</button>
         </div>
       </section>
 
@@ -877,7 +877,7 @@
                 <div class="promo__text">Seconds</div>
               </div>
             </div>
-            <a class="promo__link" href="#"> SHOP NOW </a>
+            <a class="promo__link" href="shop.html"> SHOP NOW </a>
           </div>
         </div>
       </div>
