--- a/app/shop.html
+++ b/app/shop.html
@@ -319,6 +319,9 @@
 
             <div class="shop-content">
               <div class="shop-content__filter">
+                <button class="shop__filters-btn">
+                  <img src="images/icons/filter-btn.svg" alt="filter icon" />
+                </button>
                 <div class="shop-content__filter-buttons">
                   <span class="shop-content__filter-span">View</span>
                   <button
@@ -462,7 +465,7 @@
                     <div class="product-item__box">
                       <div class="star" data-rateyo-rating="4"></div>
                       <h4 class="product-item__title">
-                        White Polo Men’s T-Shirt
+                        White Polo Men's T-Shirt
                       </h4>
                       <div class="product-item__price">
                         <div class="product-item__new-price">$34.00</div>
@@ -569,7 +572,7 @@
                     <div class="product-item__box">
                       <div class="star" data-rateyo-rating="4"></div>
                       <h4 class="product-item__title">
-                        White Polo Men’s T-Shirt
+                        White Polo Men's T-Shirt
                       </h4>
                       <div class="product-item__price">
                         <div class="product-item__new-price">$34.00</div>
@@ -676,7 +679,7 @@
                     <div class="product-item__box">
                       <div class="star" data-rateyo-rating="4"></div>
                       <h4 class="product-item__title">
-                        White Polo Men’s T-Shirt
+                        White Polo Men's T-Shirt
                       </h4>
                       <div class="product-item__price">
                         <div class="product-item__new-price">$34.00</div>
@@ -783,7 +786,7 @@
                     <div class="product-item__box">
                       <div class="star" data-rateyo-rating="4"></div>
                       <h4 class="product-item__title">
-                        White Polo Men’s T-Shirt
+                        White Polo Men's T-Shirt
                       </h4>
                       <div class="product-item__price">
                         <div class="product-item__new-price">$34.00</div>
@@ -890,7 +893,7 @@
                     <div class="product-item__box">
                       <div class="star" data-rateyo-rating="4"></div>
                       <h4 class="product-item__title">
-                        White Polo Men’s T-Shirt
+                        White Polo Men's T-Shirt
                       </h4>
                       <div class="product-item__price">
                         <div class="product-item__new-price">$34.00</div>
@@ -997,7 +1000,7 @@
                     <div class="product-item__box">
                       <div class="star" data-rateyo-rating="4"></div>
                       <h4 class="product-item__title">
-                        White Polo Men’s T-Shirt
+                        White Polo Men's T-Shirt
                       </h4>
                       <div class="product-item__price">
                         <div class="product-item__new-price">$34.00</div>
@@ -1104,7 +1107,7 @@
                     <div class="product-item__box">
                       <div class="star" data-rateyo-rating="4"></div>
                       <h4 class="product-item__title">
-                        White Polo Men’s T-Shirt
+                        White Polo Men's T-Shirt
                       </h4>
                       <div class="product-item__price">
                         <div class="product-item__new-price">$34.00</div>
@@ -1211,7 +1214,7 @@
                     <div class="product-item__box">
                       <div class="star" data-rateyo-rating="4"></div>
                       <h4 class="product-item__title">
-                        White Polo Men’s T-Shirt
+                        White Polo Men's T-Shirt
                       </h4>
                       <div class="product-item__price">
                         <div class="product-item__new-price">$34.00</div>
@@ -1318,7 +1321,7 @@
                     <div class="product-item__box">
                       <div class="star" data-rateyo-rating="4"></div>
                       <h4 class="product-item__title">
-                        White Polo Men’s T-Shirt
+                        White Polo Men's T-Shirt
                       </h4>
                       <div class="product-item__price">
                         <div class="product-item__new-price">$34.00</div>
@@ -1425,7 +1428,7 @@
                     <div class="product-item__box">
                       <div class="star" data-rateyo-rating="4"></div>
                       <h4 class="product-item__title">
-                        White Polo Men’s T-Shirt
+                        White Polo Men's T-Shirt
                       </h4>
                       <div class="product-item__price">
                         <div class="product-item__new-price">$34.00</div>
